@@ -16,6 +16,12 @@
 #define WINVER 0x400
 #define VC_EXTRALEAN		// Exclude rarely-used stuff from Windows headers
 
+// A patch to solve a VC 7.1 bug. It seems that it doesn't export _abs64
+// function.
+#if _MSC_VER == 1310
+#define _abs64	_abs64_patch
+#endif
+
 //Make VS2005 build less noisy by disabling warnings for deprecated string functions.
 #if _MSC_VER >= 1400
 	#define _CRT_SECURE_NO_DEPRECATE
